--- a/sass/gutenberg/_formatting.scss
+++ b/sass/gutenberg/_formatting.scss
@@ -1,6 +1,6 @@
 // Formatting
-@import 'gutenberg/formatting/align';
-@import 'gutenberg/formatting/caption';
-@import 'gutenberg/formatting/img';
-@import 'gutenberg/formatting/link';
-@import 'gutenberg/formatting/paragraph';
+@use 'gutenberg/formatting/align';
+@use 'gutenberg/formatting/caption';
+@use 'gutenberg/formatting/img';
+@use 'gutenberg/formatting/link';
+@use 'gutenberg/formatting/paragraph';
