--- a/sass/gutenberg/blocks/_core-columns.scss
+++ b/sass/gutenberg/blocks/_core-columns.scss
@@ -1,3 +1,5 @@
+@use 'variables/index' as *;
+
 // Core/columns block
 // Loops to enumerate the classes for columns.
 .wp-block-column > p:first-child {
