--- a/sass/gutenberg/formatting/_caption.scss
+++ b/sass/gutenberg/formatting/_caption.scss
@@ -1,3 +1,5 @@
+@use 'variables/index' as *;
+
 // Captions
 // stylelint-disable selector-max-combinators, selector-max-compound-selectors
 .editor-styles-wrapper,
