--- a/sass/views/_notFound.scss
+++ b/sass/views/_notFound.scss
@@ -1,7 +1,10 @@
+@use "helpers/clamp";
+@use "variables/breakpoints";
+
 // Error 404 title
 .block-error-404 {
   .container {
-    @media (min-width: $container-mobile) {
+    @media (min-width: breakpoints.$container-mobile) {
       padding-bottom: 10%;
       padding-top: 10%;
     }
@@ -12,7 +15,7 @@
   }
 
   h1 {
-    font-size: clamp-calc($container-mobile, 1600px, 60px, 120px);
+    font-size: clamp.clamp-calc(breakpoints.$container-mobile, 1600px, 60px, 120px);
     line-height: var(--typography-heading-core-line-height);
     margin-bottom: 1.25rem;
   }
