--- a/sass/base/_accessibility.scss
+++ b/sass/base/_accessibility.scss
@@ -1,3 +1,5 @@
+@use "variables/breakpoints";
+
 // A hidden screen reader texts for readers, focus elements for
 // vision impaired and other useful a11y CSS hacks.
 
@@ -82,7 +84,7 @@ div[tabindex]:focus {
   margin-left: 0.4375rem;
   margin-right: 2px;
 
-  @media (max-width: $container-mobile) {
+  @media (max-width: breakpoints.$container-mobile) {
     height: 0.75rem;
     margin-left: 4px;
     transform: translateY(1px);
