--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,3 +1,5 @@
+@use "helpers/animations";
+
 // stylelint-disable number-max-precision, rem-over-px/rem-over-px
 @mixin button() {
   appearance: none;
@@ -21,7 +23,7 @@
   position: relative;
   text-decoration: none;
   text-overflow: ellipsis;
-  transition: all $transition-duration cubic-bezier(.25, .46, .45, .94);
+  transition: all animations.$transition-duration cubic-bezier(.25, .46, .45, .94);
   white-space: nowrap;
   width: auto;
 
