--- a/sass/components/_link.scss
+++ b/sass/components/_link.scss
@@ -1,3 +1,5 @@
+@use "helpers/animations";
+
 // Links within content must be visually underlined
 // @link https://make.wordpress.org/themes/handbook/review/accessibility/required/#content-links
 @mixin link() {
@@ -7,7 +9,7 @@
   text-decoration: underline;
   text-decoration-color: var(--color-link-text);
   text-underline-offset: 0.375rem;
-  transition: all $transition-duration;
+  transition: all animations.$transition-duration;
 
   &:hover,
   &:focus {
