--- a/sass/global.scss
+++ b/sass/global.scss
@@ -1,60 +1,37 @@
 @charset 'utf-8';
 
 // Reset
-@import 'helpers/sanitize';
+@use 'helpers/sanitize' as *;
 
 // Helpers
-@import 'helpers/animations';
-@import 'helpers/aspect-ratio';
-@import 'helpers/box-model';
-@import 'helpers/clamp';
-@import 'helpers/images';
-@import 'helpers/font';
-@import 'helpers/variablefont';
+@use 'helpers/index' as *;
 
 // Variables
-@import 'variables/colors';
-@import 'variables/breakpoints';
-@import 'variables/typography';
-@import 'variables/forms';
-@import 'variables/spacings';
+@use 'variables/index' as *;
 
 // Accessibility
-@import 'base/accessibility';
+@use 'base/accessibility' as *;
 
 // Style components
-@import 'components/components';
+@use 'components/index' as *;
 
 // Navigation
-@import 'navigation/navigation';
+@use 'navigation/navigation' as *;
 
 // Structure
-@import 'layout/general';
-@import 'layout/print';
-@import 'layout/typography';
-@import 'layout/site-header';
-@import 'layout/site-footer';
-@import 'layout/forms';
-@import 'layout/wordpress';
+@use 'layout/index' as *;
 
 // Global features
-@import 'features/top';
-@import 'features/gallery';
-@import 'features/pagination';
-@import 'features/gravity-forms';
+@use 'features/index' as *;
 
 // Views
-@import 'views/front-page';
-@import 'views/search';
-@import 'views/404';
-@import 'views/single';
-@import 'views/comments';
+@use 'views/index' as *;
 
 // Gutenberg layout outside blocks
-@import 'gutenberg/layout/content';
+@use 'gutenberg/layout/content' as *;
 
 // Gutenberg blocks
-@import 'gutenberg/blocks';
+@use 'gutenberg/blocks' as *;
 
 // Gutenberg formatting
-@import 'gutenberg/formatting';
+@use 'gutenberg/formatting' as *;
