--- a/sass/gutenberg/_blocks.scss
+++ b/sass/gutenberg/_blocks.scss
@@ -1,22 +1,23 @@
+@use "sass:meta";
 // List of all blocks: https://wordpress.org/support/article/blocks/
 // Core blocks only meant for article content
 .editor-styles-wrapper,
 .article-content {
-  @import 'gutenberg/blocks/core-blockquote';
-  @import 'gutenberg/blocks/core-buttons';
-  @import 'gutenberg/blocks/core-columns';
-  @import 'gutenberg/blocks/core-separator';
-  @import 'gutenberg/blocks/core-heading';
-  @import 'gutenberg/blocks/core-image';
-  @import 'gutenberg/blocks/core-list';
-  @import 'gutenberg/blocks/core-paragraph';
-  @import 'gutenberg/blocks/core-pullquote';
-  @import 'gutenberg/blocks/core-table';
-  @import 'gutenberg/blocks/core-video';
+  @include meta.load-css('gutenberg/blocks/core-blockquote');
+  @include meta.load-css('gutenberg/blocks/core-buttons');
+  @include meta.load-css('gutenberg/blocks/core-columns');
+  @include meta.load-css('gutenberg/blocks/core-separator');
+  @include meta.load-css('gutenberg/blocks/core-heading');
+  @include meta.load-css('gutenberg/blocks/core-image');
+  @include meta.load-css('gutenberg/blocks/core-list');
+  @include meta.load-css('gutenberg/blocks/core-paragraph');
+  @include meta.load-css('gutenberg/blocks/core-pullquote');
+  @include meta.load-css('gutenberg/blocks/core-table');
+  @include meta.load-css('gutenberg/blocks/core-video');
 
   // Custom Gutenberg block styles
-  @import 'gutenberg/blocks/boxed';
-  @import 'gutenberg/blocks/button-file';
+  @include meta.load-css('gutenberg/blocks/boxed');
+  @include meta.load-css('gutenberg/blocks/button-file');
 
   // Add here those ACF Gutenberg blocks you want to use inside article-content
   // @import 'gutenberg/blocks/your-new-acf-block';
@@ -26,8 +27,8 @@
 .editor-styles-wrapper,
 .site-main {
   // Error block styles
-  @import 'gutenberg/blocks/error';
+  @include meta.load-css('gutenberg/blocks/error');
 
   // ACF blocks
-  // @import 'gutenberg/blocks/your-new-acf-block';
+  @include meta.load-css('gutenberg/blocks/hero');
 }
