--- a/sass/gutenberg/blocks/_button-file.scss
+++ b/sass/gutenberg/blocks/_button-file.scss
@@ -1,3 +1,5 @@
+@use '../../components/button-size-small' as *;
+
 .wp-block-file .wp-block-file__button {
   @include button-size-small();
   font-size: .8em;
