--- a/sass/gutenberg/layout/_content.scss
+++ b/sass/gutenberg/layout/_content.scss
@@ -1,3 +1,5 @@
+@use "variables/breakpoints";
+
 // Gutenberg content
 .editor-styles-wrapper,
 .article-content {
@@ -15,9 +17,9 @@
   line-height: var(--typography-paragraph-line-height);
   margin-left: auto;
   margin-right: auto;
-  max-width: $width-max-article;
+  max-width: breakpoints.$width-max-article;
 
-  @media (max-width: $width-max-article + 40px) {
+  @media (max-width: breakpoints.$width-max-article + 40px) {
     padding-left: var(--spacing-container-padding-inline);
     padding-right: var(--spacing-container-padding-inline);
 
