--- a/sass/layout/_site-header.scss
+++ b/sass/layout/_site-header.scss
@@ -1,3 +1,5 @@
+@use "variables/breakpoints";
+
 // The very top of the site, element that usually includes
 // the site navigation and search for example.
 .site-header {
@@ -7,7 +9,7 @@
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
-  max-width: $width-grid-base;
+  max-width: breakpoints.$width-grid-base;
   padding-bottom: var(--spacing-site-header-padding-block);
   // stylelint-disable-next-line
   padding-left: 20px;
@@ -55,7 +57,7 @@
   margin-right: auto;
   margin-top: calc(var(--spacing-container-padding-block) * 2);
   // stylelint-disable-next-line
-  max-width: $width-grid-base - 40px;
+  max-width: breakpoints.$width-grid-base - 40px;
   order: -1;
   // stylelint-disable-next-line
   padding: 40px;
@@ -84,7 +86,7 @@
   padding: 10px 20px;
   white-space: nowrap;
 
-  @media (max-width: $width-max-mobile) {
+  @media (max-width: breakpoints.$width-max-mobile) {
     border-color: var(--color-white);
     color: var(--color-white);
   }
