--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -1,6 +1,6 @@
 // Navigation core files
-@import 'nav-mobile';
-@import 'nav-desktop';
+@use 'nav-mobile';
+@use 'nav-desktop';
 
 // Click navigation
 // @import 'nav-click-desktop';
