Primeiro bloco (hero)

--- a/sass/gutenberg/_blocks.scss
+++ b/sass/gutenberg/_blocks.scss
@@ -14,10 +14,11 @@
   @include meta.load-css('gutenberg/blocks/core-pullquote');
   @include meta.load-css('gutenberg/blocks/core-table');
   @include meta.load-css('gutenberg/blocks/core-video');
-
+  
   // Custom Gutenberg block styles
   @include meta.load-css('gutenberg/blocks/boxed');
   @include meta.load-css('gutenberg/blocks/button-file');
+  @include meta.load-css('gutenberg/blocks/hero');
 
   // Add here those ACF Gutenberg blocks you want to use inside article-content
   // @import 'gutenberg/blocks/your-new-acf-block';
