--- a/css/dev/global.css
+++ b/css/dev/global.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /**
  * 1. Add border box sizing in all browsers (opinionated).
  * 2. Backgrounds do not repeat by default (opinionated).
@@ -1165,70 +1164,7 @@ p:last-child {
   display: flex;
 }
 
-.site-main {
-  display: grid;
-}
-
-.site-main::after {
-  align-items: center;
-  background-position: 0 0, 100% 0;
-  background-repeat: no-repeat;
-  background-size: 3px 100%;
-  border: 6px solid var(--color-black);
-  color: var(--color-black);
-  content: "Build your website here!";
-  display: flex;
-  font-size: clamp(2rem, 3.4vw, 3rem);
-  font-weight: var(--typography-weight-bold);
-  justify-content: center;
-  margin-bottom: var(--spacing-container-padding-block);
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: calc(var(--spacing-container-padding-block)*2);
-  max-width: 1400px;
-  order: -1;
-  padding: 40px;
-  position: relative;
-  text-align: center;
-  white-space: nowrap;
-  width: calc(100% - 40px);
-}
-
-.site-branding .site-title {
-  display: none;
-}
-
-.site-branding::after {
-  border: 4px solid var(--color-black);
-  color: var(--color-black);
-  content: "Your logo here";
-  font-size: 16px;
-  font-weight: var(--typography-weight-bold);
-  padding: 10px 20px;
-  white-space: nowrap;
-}
-@media (max-width: 1030px) {
-  .site-branding::after {
-    border-color: var(--color-white);
-    color: var(--color-white);
-  }
-}
-
-.menu-items-wrapper:not(:has(.menu-items)) {
-  display: flex;
-}
-.menu-items-wrapper:not(:has(.menu-items))::before {
-  align-self: center;
-  color: var(--color-black);
-  content: "Your nav here          About         Services         Pricing       Contact";
-  display: block;
-  font-weight: var(--typography-weight-semibold);
-  opacity: 0.2;
-  padding: 15px 0;
-}
-
 .site-footer {
-  display: none;
   background-color: var(--color-white);
   clear: both;
   color: var(--color-paragraph);
@@ -2280,6 +2216,7 @@ body *[aria-invalid=true] {
 
 
 .article-content,.editor-styles-wrapper {
+  /* variables/_index.scss */
   /* variables/_index.scss */
   /* variables/_index.scss */
   /* variables/_index.scss */
@@ -4490,6 +4427,206 @@ body *[aria-invalid=true] {
   padding: 0.3em 0.8em;
 }
 
+.article-content :root,.editor-styles-wrapper :root {
+  --color-black: #000;
+  --color-blue-chalk: #ece6f2;
+  --color-east-bay: #545773;
+  --color-pattens-blue: #eaf1f8;
+  --color-science-blue: #0049d1;
+  --color-scorpion: #5f5f5f;
+  --color-valhalla: #2a2d3e;
+  --color-white: #fff;
+  --color-main: var(--color-valhalla);
+  --color-heading: var(--color-main);
+  --color-paragraph: var(--color-east-bay);
+  --color-link-text: var(--color-science-blue);
+  --color-link-text-hover: var(--color-black);
+  --color-error: #cc2e2e;
+  --color-success: #21aa14;
+  --width-max-mobile: 1030px;
+  --typography-family-main: "Mona Sans", -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", sans-serif;
+  --typography-family-paragraph: var(--typography-family-main);
+  --typography-family-heading: var(--typography-family-main);
+  --typography-size-hero: 52px;
+  --typography-h1-size: 40px;
+  --typography-h2-size: 30px;
+  --typography-h3-size: 24px;
+  --typography-h4-size: 20px;
+  --typography-h5-size: 16px;
+  --typography-h6-size: 14px;
+  --typography-size-12: 12px;
+  --typography-size-13: 13px;
+  --typography-size-14: 14px;
+  --typography-size-15: 15px;
+  --typography-size-16: 16px;
+  --typography-size-17: 17px;
+  --typography-size-18: 18px;
+  --typography-size-20: 20px;
+  --typography-size-22: 22px;
+  --typography-paragraph-size: var(--typography-size-18);
+  --typography-nav-toggle-label-size: 15px;
+  --typography-captions-size: 15px;
+  --typography-heading-line-height: 1.5;
+  --typography-heading-core-line-height: 1.23;
+  --typography-paragraph-line-height: 1.7;
+  --typography-weight-regular: 400;
+  --typography-weight-medium: 500;
+  --typography-weight-semibold: 600;
+  --typography-weight-bold: 700;
+  --typography-weight-paragraph: var(--typography-weight-regular);
+  --typography-weight-heading: var(--typography-weight-bold);
+}
+@font-face {
+  font-display: auto;
+  font-family: "Mona Sans";
+  font-style: normal;
+  font-weight: 1 999;
+  src: url(../../fonts/monasansvf.woff2) format("woff2"), url(../../fonts/monasansvf.woff) format("woff");
+}
+@media (max-width: 600px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --typography-size-hero: 38px;
+    --typography-h1-size: 32px;
+    --typography-h2-size: 24px;
+    --typography-h3-size: 21px;
+    --typography-h4-size: 18px;
+    --typography-h5-size: 14px;
+    --typography-h6-size: 12px;
+    --typography-paragraph-size: 16px;
+  }
+}
+@media (max-width: 420px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --typography-size-16: 14px;
+    --typography-nav-toggle-label-size: 13px;
+  }
+}
+
+.article-content :root,.editor-styles-wrapper :root {
+  --color-background-input-field: var(--color-white);
+  --color-form-text: var(--color-paragraph);
+  --color-form-label-text: var(--color-form-text);
+  --color-required-label-text: var(--color-form-text);
+  --color-border-forms: var(--color-paragraph);
+  --color-border-forms-focus: var(--color-paragraph);
+  --color-button: var(--color-white);
+  --color-button-hover: var(--color-white);
+  --color-button-background: var(--color-east-bay);
+  --color-button-background-hover: var(--color-valhalla);
+  --color-checkbox: var(--color-east-bay);
+  --color-checkbox-outline: 0 0 0 3px #54577333;
+  --color-checkbox-border-hover: color.adjust(#545773, 15%);
+  --color-checkbox-checked: var(--color-form-label-text);
+  --color-placeholder: var(--color-paragraph);
+  --color-placeholder-focus: var(--color-black);
+  --opacity-placeholder: .4;
+  --opacity-placeholder-focus: .8;
+  --border-radius-checkbox: 3px;
+  --border-radius-input-field: 3px;
+  --border-radius-button: 3px;
+  --border-radius-select: 3px;
+  --border-width-checkbox: 1px;
+  --border-width-input-field: 1px;
+  --typography-size-input-fields: var(--typography-size-17);
+  --typography-size-input-labels: var(--typography-size-input-fields);
+  --typography-size-required-text-label: var(--typography-size-input-fields);
+  --typography-size-required-asterisk-label: 0.8593rem;
+  --form-column-gap: 1.25rem;
+  --form-row-gap: 1.25rem;
+  --form-required-gap: 0.3125rem;
+  --form-line-height: 0.9375rem;
+  --form-padding-vertical: 0.625rem;
+  --form-padding-horizontal: 0.9375rem;
+  --gap-checkbox: 0.3905rem;
+  --gap-select-icon: 0.9375rem;
+  --size-checkbox: 1.375rem;
+  --size-checkbox-marker: 0.4675rem;
+  --size-radio-button: 0.625rem;
+  --size-radio-button-marker: 0.3125rem;
+  --spacing-grid-gap: 3rem;
+  --spacing-container-padding-inline: 1.25rem;
+  --spacing-container-padding-inline-large: 4rem;
+  --spacing-container-padding-block: 4rem;
+  --spacing-site-header-padding-block: 1.25rem;
+  --spacing-content-padding-block: 5rem;
+  --spacing-text-margin-block: 2.5rem;
+  --spacing-wp-block-image-margin-block: 2.5rem;
+  --spacing-paragraphs-margin-block: 1.6875rem;
+}
+@media (max-width: 1590px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --spacing-container-padding-inline: 4rem;
+  }
+}
+@media (max-width: 700px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --spacing-container-padding-inline: 1.25rem;
+  }
+}
+@media (max-width: 1030px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --spacing-site-header-padding-block: 1.25rem;
+  }
+}
+@media (max-width: 1024px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --spacing-grid-gap: 2rem;
+  }
+}
+@media (max-width: 770px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --spacing-grid-gap: var(--spacing-container-padding-inline);
+    --spacing-container-padding-block: 3.125rem;
+  }
+}
+@media (max-width: 600px) {
+  
+  .article-content :root,.editor-styles-wrapper :root {
+    --spacing-content-padding-block: 3.75rem;
+    --spacing-container-padding-block: 2.5rem;
+  }
+}
+@media (max-width: 600px) {
+}
+
+.article-content .block-hero,.editor-styles-wrapper .block-hero {
+  background-color: var(--color-black);
+  width: 100vw;
+}
+
+.article-content .block-hero .container,.editor-styles-wrapper .block-hero .container {
+  align-items: center;
+  display: flex;
+}
+@media (min-width: 600px) {
+  
+  .article-content .block-hero .container,.editor-styles-wrapper .block-hero .container {
+    height: 100vh;
+    max-height: 60rem;
+  }
+}
+
+.article-content .block-hero .content,.editor-styles-wrapper .block-hero .content {
+  width: 100%;
+}
+
+.article-content .block-hero h1,
+.article-content .block-hero p,.editor-styles-wrapper .block-hero h1,
+.editor-styles-wrapper .block-hero p {
+  color: var(--color-white);
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900px;
+  text-align: center;
+}
+
 .editor-styles-wrapper,
 .site-main {
   /* variables/_index.scss */
@@ -4688,30 +4825,31 @@ body *[aria-invalid=true] {
 }
 @media (max-width: 600px) {
 }
-.editor-styles-wrapper block-hero,
-.site-main block-hero {
+.editor-styles-wrapper .block-hero,
+.site-main .block-hero {
   background-color: var(--color-black);
+  width: 100vw;
 }
-.editor-styles-wrapper block-hero .container,
-.site-main block-hero .container {
+.editor-styles-wrapper .block-hero .container,
+.site-main .block-hero .container {
   align-items: center;
   display: flex;
 }
 @media (min-width: 600px) {
-  .editor-styles-wrapper block-hero .container,
-  .site-main block-hero .container {
+  .editor-styles-wrapper .block-hero .container,
+  .site-main .block-hero .container {
     height: 100vh;
     max-height: 60rem;
   }
 }
-.editor-styles-wrapper block-hero .content,
-.site-main block-hero .content {
+.editor-styles-wrapper .block-hero .content,
+.site-main .block-hero .content {
   width: 100%;
 }
-.editor-styles-wrapper block-hero h1,
-.editor-styles-wrapper block-hero p,
-.site-main block-hero h1,
-.site-main block-hero p {
+.editor-styles-wrapper .block-hero h1,
+.editor-styles-wrapper .block-hero p,
+.site-main .block-hero h1,
+.site-main .block-hero p {
   color: var(--color-white);
   margin-left: auto;
   margin-right: auto;
