--- a/sass/gutenberg/blocks/_hero.scss
+++ b/sass/gutenberg/blocks/_hero.scss
@@ -1,7 +1,8 @@
 @use 'variables/index' as *;
 
-block-hero {
+.block-hero {
   background-color: var(--color-black);
+  width: 100vw;
 
   .container {
     align-items: center;
