--- a/sass/helpers/_font.scss
+++ b/sass/helpers/_font.scss
@@ -5,13 +5,15 @@
 @mixin font($family, $src, $weight: normal, $style: normal) {
   @font-face {
     // @link https://css-tricks.com/almanac/properties/f/font-display/
-    font-display: auto;
+    font-display: optional; // se a conexão tiver muito ruim, nem carrega a fonte.
     font-family: $family;
     font-style: $style;
     font-weight: $weight;
 
     // Slightly Deeper Browser Support
     // @source https://css-tricks.com/snippets/css/using-font-face/#slightly-deeper-browser-support
-    src: url('#{$src}.woff') format('woff'), url('#{$src}.woff2') format('woff2'), url('#{$src}.ttf') format('truetype');
+    src: url('#{$src}.woff') format('woff'),
+    url('#{$src}.woff2') format('woff2'),
+    url('#{$src}.ttf') format('truetype');
   }
 }
