--- a/sass/variables/_typography.scss
+++ b/sass/variables/_typography.scss
@@ -1,4 +1,5 @@
 @use "helpers/variablefont";
+@use "helpers/font";
 @use "breakpoints";
 
 // Self-hosted fonts
@@ -8,6 +9,10 @@
 @include variablefont.variablefont('Mona Sans', '../../fonts/monasansvf', 1 999);
 
 // Regular fonts
+@include font('Faktum', '../../fonts/Faktum-Light', 400);
+@include font('Faktum', '../../fonts/Faktum-Regular', 500);
+@include font('Faktum', '../../fonts/Faktum-SemiBold', 600);
+@include font('Faktum', '../../fonts/Faktum-Bold', 700);
 // @include font('Inter', '../../fonts/inter-400', 400);
 // @include font('Inter', '../../fonts/inter-400-italic', 400, italic);
 // @include font('Inter', '../../fonts/inter-500', 500);
@@ -18,7 +23,8 @@
 // CSS Variables for responsive fonts
 :root {
   // Defined font families, replace these with your own
-  --typography-family-main: 'Mona Sans', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen-Sans', 'Ubuntu', 'Cantarell', 'Helvetica Neue', sans-serif;
+  // --typography-family-main: 'Mona Sans', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen-Sans', 'Ubuntu', 'Cantarell', 'Helvetica Neue', sans-serif;
+  --typography-family-main: 'Faktum', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Oxygen-Sans', 'Ubuntu', 'Cantarell', 'Helvetica Neue', sans-serif;
 
   // Contexts where the fonts are used, replace this with the families defined above
   --typography-family-paragraph: var(--typography-family-main);
