--- a/sass/features/_index.scss
+++ b/sass/features/_index.scss
@@ -1,6 +1,7 @@
 @forward 'features/top';
+@forward 'features/lojas';
 @forward 'features/gallery';
 @forward 'features/pagination';
-@forward 'features/gravity-forms';
+// @forward 'features/gravity-forms';
 
 /* features/_index.scss */
