--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -17,9 +17,10 @@
   --azul-leitura: #004D8F; // 0, 77, 143
   --azul-forte: #005CE8; // 0, 92, 232
 
-  --cinza-clarinho: #f7f7f7;
+  --cinza-clarinho: #F2F2F2;
   --cinza-claro: #e6e6e6;
   --cinza-medio: #9b9b9b;
+  --cinza-escurinho: #666;
   --cinza-escuro: #333;
 
   // Main element colors
