Ajustes na estilização e implementação da API do Google Maps; adição de verificação de dimensões para dispositivos móveis 31/01/2025 10:13

--- a/css/dev/gutenberg-editor-styles.css
+++ b/css/dev/gutenberg-editor-styles.css
@@ -3536,7 +3536,7 @@ body:not(.wp-admin) {
 }
 
 @media (min-width: 600px) {
-  .hide-on-desktop {
+  .hide-on- {
     display: none !important;
   }
 }
