--- a/css/dev/global.css
+++ b/css/dev/global.css
@@ -1054,7 +1054,7 @@ body:not(.wp-admin) {
 }
 
 @media (min-width: 600px) {
-  .hide-on-desktop {
+  .hide-on- {
     display: none !important;
   }
 }
@@ -1619,19 +1619,26 @@ input[type=radio]:focus,input[type=radio]:hover {
 }
 
 .lista-lojas-container {
-  position: absolute;
-  top: 120px;
-  right: auto;
-  left: 5%;
-  max-width: 650px;
-  width: 45vw;
-  height: calc(100vh - 200px);
+  position: relative;
+  width: 100vw;
   overflow-x: hidden;
   overflow-y: scroll;
+  font-size: 0.9rem;
   background-color: var(--cinza-clarinho);
   border: 1px solid var(--cinza-claro);
   border-bottom-color: var(--cinza-medio);
   box-shadow: 0 10px 20px #004d8f33;
+}
+@media (min-width: 600px) {
+  .lista-lojas-container {
+    position: absolute;
+    top: 120px;
+    right: auto;
+    left: 5%;
+    max-width: 650px;
+    width: 45vw;
+    height: calc(100vh - 200px);
+  }
 }
 .lista-lojas-container .ll-spacer {
   padding: 40px 10%;
@@ -1662,6 +1669,7 @@ input[type=radio]:focus,input[type=radio]:hover {
   margin: 20px 0;
   padding: 40px 50px;
   background-color: var(--color-white);
+  border-radius: var(--border-radius-input-field);
 }
 .lista-lojas-container .ll-lista .ll-loja:hover {
   background-color: var(--color-white);
@@ -1737,12 +1745,18 @@ input[type=radio]:focus,input[type=radio]:hover {
 
 #zoom-out {
   position: absolute;
+  bottom: 120px;
   right: 10px;
   padding: 5px;
-  top: calc(100vh - 180px);
   width: 40px;
   height: 40px;
   z-index: 9;
+}
+@media (min-width: 600px) {
+  #zoom-out {
+    top: calc(100vh - 180px);
+    bottom: initial;
+  }
 }
 
 .gallery {
