--- a/sass/features/_lojas.scss
+++ b/sass/features/_lojas.scss
@@ -1,7 +1,12 @@
 @use "variables/breakpoints";
 
-.loja-mapa {
-  // position: relative;
+#map {
+  min-height: 300px;
+  height: calc(100vh - 325px);
+
+  @media (min-width: breakpoints.$container-mobile) {
+    min-height: calc(100vh - 100px);
+  }
 }
 
 .lista-lojas-container {
@@ -14,6 +19,7 @@
   border: 1px solid var(--cinza-claro);
   border-bottom-color: var(--cinza-medio);
   box-shadow: 0 10px 20px rgba(0, 77, 143, .2);
+  z-index: 9;
 
   @media (min-width: breakpoints.$container-mobile) {
     position: absolute;
@@ -41,11 +47,16 @@
     width: 100%;
     font-size: var(--typography-paragraph-size);
     margin: 0;
-    padding: 32px 50px 32px 80px;
+    padding: 33px 23px 33px 63px;
     background-image: url(../../svg/marcador-cinza.svg);
+    background-position: 30px 50%;
     background-repeat: no-repeat;
-    background-position: 50px 50%;
     background-size: 20px;
+
+    @media (min-width: breakpoints.$container-mobile) {
+      padding: 32px 50px 32px 80px;
+      background-position: 50px 50%;
+    }
   }
 
   .ll-lista {
@@ -65,7 +76,17 @@
       }
 
       &.selected {
+        position: fixed;
+        bottom: -20px;
+        left: 0;
+        right: 0;
         background-color: var(--azul-leitura);
+        z-index: 10;
+
+        @media (min-width: breakpoints.$container-mobile) {
+          position: relative;
+          bottom: initial;
+        }
 
         h4,
         p {
@@ -150,12 +171,12 @@
 
 #zoom-out {
   position: absolute;
-  bottom: 120px;
+  top: calc(100vh - 150px);
   right: 10px;
   padding: 5px;
   width: 40px;
   height: 40px;
-  z-index: 9;
+  z-index: 3;
 
   @media (min-width: breakpoints.$container-mobile) {
     top: calc(100vh - 180px);
